--- a/test.yaml
+++ b/test.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: pgadmin
+  name: pgadmin1
   namespace: pgadmin
 spec:
   type: NodePort
@@ -11,4 +11,3 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 9376
-
