--- a/apps/base/pgadmin/service.yaml
+++ b/apps/base/pgadmin/service.yaml
@@ -8,7 +8,6 @@ spec:
   selector:
     env: pgadmin
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 9376
-
+    - port: 80
+      targetPort: 80
+      nodePort: 30272
