--- a/apps/base/vaultwarden/deployment.yaml
+++ b/apps/base/vaultwarden/deployment.yaml
@@ -17,3 +17,5 @@ spec:
       containers:
       - image: vaultwarden/server:latest
         name: server
+        ports:
+          - containerPort: 80
