--- a/apps/base/vaultwarden/service.yaml
+++ b/apps/base/vaultwarden/service.yaml
@@ -7,7 +7,7 @@ metadata:
   name: vaultwarden
 spec:
   ports:
-  - name: 80-80
+  - name: http
     port: 8090
     protocol: TCP
     targetPort: 80
